added open source code link and name to bottom of project

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
         </div>
         </div>
     </div>
+    <p> 
+      <a href="https://github.com/karlieward/weather-app-project">
+        Open-source code
+      </a> by Karlie Ward
+    </p>
       <script src='index.js'></script>
   </body>
 </html>
