added css to by class
center and added padding

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </span>
         </div>
         <div class="row">
-          <div class="col" id = faren>mAx: <span id = maximum>94</span>°</div>
+          <div class="col" id = faren>max: <span id = maximum>94</span>°</div>
           <div class="col" id = celc>min: <span id = minimum>56</span>°</div>
         </div>
             <div class="card-body">
@@ -87,7 +87,7 @@
         </div>
         </div>
     </div>
-    <p> 
+    <p class="coded-by"> 
       <a href="https://github.com/karlieward/weather-app-project">
         Open-source code
       </a> by Karlie Ward
