edited the celsius and fahrenheit conversion links

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <div class="col-6">
               <div class="display-temperature">
                 <strong class="temperature" id="temperature">89</strong>
-                <span class="units">
-                  <a href="#" id="celsius-link">°C</a> |
+                <span>
+                  <a href="#" id="celsius-link" class="active">°C</a> |
                    <a href="#" id="fahrenheit-link">°F</a>
                 </span>
               </div> 
