added wind speed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <h1 id="city"></h1>
             <p id="date"></p>
             <h2 id="description">Description</h2>
+            <div>
+              <span>Wind Speed:</span>
+              <span id="wind-speed">45</span>
+              <span>km/h</span>
+            </div>
            <div> 
              <span>
               Feels like: 
