--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
               <span id="wind-speed">45</span>
               <span>km/h</span>
             </div>
-           <div> 
-             <span>
-              Feels like: 
-             </span>
-              <strong id="feels-like">
-              19°
-              </strong>
+            <div>
+              <span> Feels like: </span>
+              <strong id="feels-like"> 19° </strong>
             </div>
             <img
               id="weather-icon"
@@ -42,36 +38,28 @@
               alt="weather icon"
             />
           </div>
-            <div class="col-6">
-              <div class="display-temperature">
-                <strong class="temperature" id="temperature">89</strong>
-                <span>
-                  <a href="#" id="celsius-link" class="active">°C</a> |
-                   <a href="#" id="fahrenheit-link">°F</a>
-                </span>
-              </div> 
+          <div class="col-6">
+            <div class="display-temperature">
+              <strong class="temperature" id="temperature">89</strong>
+              <span>
+                <a href="#" id="celsius-link" class="active">°C</a> |
+                <a href="#" id="fahrenheit-link">°F</a>
+              </span>
             </div>
-            <div class="card-body">
-              <div class="row">
-                <div class="col">Thu</div>
-                <div class="col">Fri</div>
-                <div class="col">Sat</div>
-                <div class="col">Sun</div>
-                <div class="col">Mon</div>
-              </div>
-              <div class="row">
-                <div class="col">☀️</div>
-                <div class="col">☀️</div>
-                <div class="col">☀️</div>
-                <div class="col">☀️</div>
-                <div class="col">☀️</div>
-              </div>
-              <div class="row">
-                <div class="col">94°</div>
-                <div class="col">93°</div>
-                <div class="col">95°</div>
-                <div class="col">97°</div>
-                <div class="col">91°</div>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-2">
+                <div class="forcast-days">Thu</div>
+                <img
+                  src="http://openweathermap.org/img/wn/50d@2x.png"
+                  alt=""
+                  width="42"
+                />
+                <div class="forcast-Temps">
+                  <span class="forcast-temps-max"> 18° </span>
+                  <span class="forcast-temps-min"> 12° </span>
+                </div>
               </div>
             </div>
             <form class="search-form" id="search-form">
